--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- photo grid -->
     <div class="photo-grid-container">
       <div class="photo-card">
-        <img src="./photos/sandwich.jpg" alt="" />
+        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
         <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
@@ -39,7 +39,7 @@
         </p>
       </div>
       <div class="photo-card">
-        <img src="./photos/sandwich.jpg" alt="" />
+        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
         <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
@@ -47,7 +47,7 @@
         </p>
       </div>
       <div class="photo-card">
-        <img src="./photos/sandwich.jpg" alt="" />
+        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
         <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
@@ -55,7 +55,7 @@
         </p>
       </div>
       <div class="photo-card">
-        <img src="./photos/sandwich.jpg" alt="" />
+        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
         <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
@@ -63,7 +63,7 @@
         </p>
       </div>
       <div class="photo-card">
-        <img src="./photos/sandwich.jpg" alt="" />
+        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
         <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
@@ -71,7 +71,7 @@
         </p>
       </div>
       <div class="photo-card">
-        <img src="./photos/sandwich.jpg" alt="" />
+        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
         <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
@@ -79,7 +79,7 @@
         </p>
       </div>
       <div class="photo-card">
-        <img src="./photos/sandwich.jpg" alt="" />
+        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
         <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
