added pagination and about section

--- a/index.html
+++ b/index.html
@@ -39,8 +39,42 @@
         </p>
       </div>
       <div class="photo-card">
-        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
-        <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
+        <img class="card-img" src="./photos/steak.jpg" alt="" />
+        <h3 class="card-heading">Let Me Tell You About This Steak</h3>
+        <p class="card-text">
+          Just some random text, lorem ipsum text praesent tincidunt ipsum
+          lipsum.
+        </p>
+      </div>
+      <div class="photo-card">
+        <img class="card-img" src="./photos/cherries.jpg" alt="" />
+        <h3 class="card-heading">Cherries, interrupted</h3>
+        <p class="card-text">
+          Just some random text, lorem ipsum text praesent tincidunt ipsum
+          lipsum.
+        </p>
+      </div>
+      <div class="photo-card">
+        <img class="card-img" src="./photos/wine.jpg" alt="" />
+        <h3 class="card-heading">
+          Once Again, Robust Wine and Vegetable Pasta
+        </h3>
+        <p class="card-text">
+          Just some random text, lorem ipsum text praesent tincidunt ipsum
+          lipsum.
+        </p>
+      </div>
+      <div class="photo-card">
+        <img class="card-img" src="./photos/popsicle.jpg" alt="" />
+        <h3 class="card-heading">All I Need Is a Popsicle</h3>
+        <p class="card-text">
+          Just some random text, lorem ipsum text praesent tincidunt ipsum
+          lipsum.
+        </p>
+      </div>
+      <div class="photo-card">
+        <img class="card-img" src="./photos/salmon.jpg" alt="" />
+        <h3 class="card-heading">Salmon For Your Skin</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
           lipsum.
@@ -55,40 +89,8 @@
         </p>
       </div>
       <div class="photo-card">
-        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
-        <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
-        <p class="card-text">
-          Just some random text, lorem ipsum text praesent tincidunt ipsum
-          lipsum.
-        </p>
-      </div>
-      <div class="photo-card">
-        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
-        <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
-        <p class="card-text">
-          Just some random text, lorem ipsum text praesent tincidunt ipsum
-          lipsum.
-        </p>
-      </div>
-      <div class="photo-card">
-        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
-        <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
-        <p class="card-text">
-          Just some random text, lorem ipsum text praesent tincidunt ipsum
-          lipsum.
-        </p>
-      </div>
-      <div class="photo-card">
-        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
-        <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
-        <p class="card-text">
-          Just some random text, lorem ipsum text praesent tincidunt ipsum
-          lipsum.
-        </p>
-      </div>
-      <div class="photo-card">
-        <img class="card-img" src="./photos/sandwich.jpg" alt="" />
-        <h3 class="card-heading">The Perfect Sandwich, A Real NYC Classic</h3>
+        <img class="card-img" src="./photos/croissant.jpg" alt="" />
+        <h3 class="card-heading">Le French</h3>
         <p class="card-text">
           Just some random text, lorem ipsum text praesent tincidunt ipsum
           lipsum.
@@ -97,7 +99,21 @@
     </div>
     <!-- end of photo grid -->
     <!-- pagination -->
+    <div class="pagination">
+      <a href="#">«</a>
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">4</a>
+      <a href="#">»</a>
+    </div>
     <!-- about -->
+    <div class="about-section">
+      <h2 class="about-heading">About Me, The Food Man</h2>
+      <div class="about-img-container">
+        <img class="about-img" src="./photos/chef.jpg" alt="" />
+      </div>
+    </div>
     <!-- end of about -->
     <!-- footer -->
     <!-- end of footer -->
