--- a/index.html
+++ b/index.html
@@ -113,9 +113,27 @@
       <div class="about-img-container">
         <img class="about-img" src="./photos/chef.jpg" alt="" />
       </div>
+      <div class="about-text">
+        <h2>I am Who I Am</h2>
+        <h4>With Passion For Real, Good Food</h4>
+        <p>
+          Just me, myself and I, exploring the universe of unknownment. I have a
+          heart of love and an interest of lorem ipsum and mauris neque quam
+          blog. I want to share my world with you. Praesent tincidunt sed tellus
+          ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
+          congue gravida diam non fringilla. Praesent tincidunt sed tellus ut
+          rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
+          congue gravida diam non fringilla.
+        </p>
+      </div>
     </div>
     <!-- end of about -->
     <!-- footer -->
+    <div class="footer-container">
+      <div class="footer-left"><h1>Footer</h1></div>
+      <div class="footer-center"><h1>Blog Posts</h1></div>
+      <div class="footer-right"><h1>Popular Tags</h1></div>
+    </div>
     <!-- end of footer -->
     <script src="./app.js"></script>
   </body>
