added footer section

--- a/index.html
+++ b/index.html
@@ -129,11 +129,40 @@
     </div>
     <!-- end of about -->
     <!-- footer -->
-    <div class="footer-container">
-      <div class="footer-left"><h1>Footer</h1></div>
-      <div class="footer-center"><h1>Blog Posts</h1></div>
-      <div class="footer-right"><h1>Popular Tags</h1></div>
-    </div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-left">
+          <h1>Footer</h1>
+          <p>
+            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
+            condimentum, porta lectus vitae, ultricies congue gravida diam non
+            fringilla.
+          </p>
+        </div>
+        <div class="footer-center">
+          <h1>Blog Posts</h1>
+          <ul>
+            <li>
+              <img class="blog-img" src="./photos/blog1.jpg" alt="" />
+              <span>Lorem</span>
+            </li>
+            <li>
+              <img class="blog-img" src="./photos/blog2.jpg" alt="" />
+              <span>Lorem</span>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-right">
+          <h1>Popular Tags</h1>
+          <p>
+            <span>Travel</span>
+            <span>New York</span>
+            <span>Dinner</span>
+            <span>Salmon</span>
+          </p>
+        </div>
+      </div>
+    </footer>
     <!-- end of footer -->
     <script src="./app.js"></script>
   </body>
